--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,36 @@
-
+absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asciitree==0.3.3
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+audioread==3.0.1
+Babel==2.14.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.7.0
+blosc2==2.6.2
+bokeh==3.4.0
+branca==0.7.1
+build==1.2.1
+cachelib==0.9.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+colorcet==3.1.0
+comm==0.2.2
+contourpy==1.2.1
+css==0.1
+cycler==0.12.1
 dash==2.17.0
 dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
@@ -8,14 +40,174 @@ dash-html-components==2.0.0
 dash-leaflet==1.0.15
 dash-table==5.0.0
 dash_mantine_components==0.14.3
+dataclass-wizard==0.22.3
+debugpy==1.8.1
+decorator==5.1.1
+defopt==6.4.0
+defusedxml==0.7.1
+docopt==0.6.2
+docutils==0.21.2
+EditorConfig==0.12.4
+et-xmlfile==1.1.0
+executing==2.0.1
+fanstatic==1.4
+fasteners==0.19
+fastjsonschema==2.19.1
+fiona==1.9.6
+flammkuchen==1.0.3
+Flask==3.0.3
+Flask-Caching==2.3.0
+folium==0.16.0
+fonttools==4.51.0
+fqdn==1.5.1
+geographiclib==2.0
 geopandas==0.14.3
+geopy==2.4.1
+gunicorn==22.0.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.6
+importlib_metadata==7.1.0
+ipykernel==6.29.4
+ipython==8.12.3
+ipywidgets==8.1.2
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.4.2
+js==1.0
+jsbeautifier==1.15.1
+json5==0.9.25
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyter_server==2.14.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.8
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.1
+jupyterlab_widgets==3.0.10
+keras==3.3.3
+keras-tuner==1.4.7
+kiwisolver==1.4.5
+kt-legacy==1.0.5
+lazy_loader==0.4
+learntools==0.0.20
+librosa==0.10.2.post1
+llvmlite==0.42.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
 matplotlib-scalebar==0.8.1
+mdurl==0.1.2
+mistune==3.0.2
+ml-dtypes==0.4.0
+more-itertools==10.3.0
+msgpack==1.0.8
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+ndindex==1.8
+nest-asyncio==1.6.0
+nominatim==0.1
+notebook==7.1.3
+notebook_shim==0.2.4
+numba==0.59.1
+numcodecs==0.12.1
+numexpr==2.10.0
 numpy==1.26.4
 openpyxl==3.1.2
+optree==0.11.0
 OSGridConverter==0.1.3
+overrides==7.7.0
+packaging==24.0
 pandas==2.2.1
+pandocfilters==1.5.1
+parso==0.8.4
+PeakUtils==1.3.4
+pickleshare==0.7.5
+pillow==10.3.0
+pip-tools==7.4.1
+pipreqs==0.5.0
+platformdirs==4.2.0
 plotly==5.20.0
-json5==0.9.25
-gunicorn
+pockets==0.9.1
+pooch==1.8.1
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pycparser==2.22
+pydantic==2.7.3
+pydantic_core==2.18.4
+Pygments==2.17.2
+pyparsing==3.1.2
+pyproj==3.6.1
+pyproject_hooks==1.1.0
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2024.1
+pywin32==306
+pywinpty==2.0.13
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.35.0
+requests==2.31.0
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.18.0
+ruff==0.4.8
+scikit-learn==1.5.0
+scipy==1.13.1
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==70.0.0
+shapely==2.0.3
+six==1.16.0
+sniffio==1.3.1
+soundfile==0.12.1
+soupsieve==2.5
+soxr==0.3.7
+sphinxcontrib-napoleon==0.7
+stack-data==0.6.3
+tables==3.9.2
+tenacity==8.2.3
+terminado==0.18.1
+threadpoolctl==3.5.0
+tinycss2==1.3.0
+topojson==1.9
+tornado==6.4
+traitlets==5.14.2
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.1
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+WebOb==1.8.7
+websocket-client==1.8.0
+Werkzeug==3.0.2
+wheel==0.43.0
+widgetsnbextension==4.0.10
+xyzservices==2024.4.0
+yarg==0.1.9
+zarr==2.18.2
+zipp==3.19.0
